grammar.txt
http://craftinginterpreters.com/representing-code.html#context-free-grammars

stmt            -> FN|ACTN IDENTIFIER LPAR (TYPE COLON IDENTIFIER,)* RPAR ("->") TYPE LBRACE (expr|termination|assignment|if_statement|loop SEMICOLON)+ RBRACE SEMICOLON #Function/Non-returning function definition
                -> DEC ACTN? IDENTIFIER LPAR (TYPE COLON IDENTIFIER,)* RPAR ("->") TYPE SEMICOLON #Function declaration/prototype
                -> assignment SEMICOLON #Only let assignment

if_statement    -> IF expr LBRACE (expr|termination|assignment|if_statement|loop SEMICOLON)* RBRACE
                -> if_statement ELSE LBRACE (expr|termination|assignment|if_statement)* RBRACE
                -> if_statement ELSE IF expr LBRACE (expr|termination|assignment|if_statement|loop SEMICOLON)* RBRACE

loop            -> LOOP LBRACE (expr)* RBRACE
                -> WHILE expr LBRACE (expr)* RBRACE

termination     -> RET expr
                -> BREAK
                -> CONTINUE

assignment      -> IDENTIFIER ("<-") expr
                -> LET TYPE COLON IDENTIFIER ("<-") expr

expr            -> logic

logic           -> comparison (("&"|"|") comparison)*

comparison      -> term ((">"|"<"|"=") term)*

term            -> factor (("+"|"-") factor)*

factor          -> unary ("*" unary)*

unary           -> ("+"|"-"|"!") unary 
                -> primary

primary         -> (NUMBER|IDENTIFIER) 
                -> TYPE COLON NUMBER
                -> LPAR expr RPAR
                -> IDENTIFIER LPAR (expr,)* RPAR #Function call
                -> primary AS TYPE
